argoCD/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ayane-osiruko
spec:
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: ayane-osiruko
  replicas: 1
  template:
    metadata:
      labels:
        app: ayane-osiruko
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: app
          image: registry.uniproject.jp/ayane/osiruko:0.1.2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: default-port
          resources:
            limits:
              memory: "2Gi"
              cpu: "2000m"
            requests:
              memory: "1Gi"
              cpu: "100m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ayane-osiruko-db
spec:
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: ayane-osiruko-db
  replicas: 1
  template:
    metadata:
      labels:
        app: ayane-osiruko-db
    spec:
      containers:
        - name: postgres
          image: postgres:17
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-persistent-storage
              mountPath: "/var/lib/postgresql/data"
      volumes:
        - name: postgres-persistent-storage
          persistentVolumeClaim:
            claimName: ayane-osiruko
